<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.PersonFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/person_image"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/round_outline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/person_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/person_image"
            app:layout_constraintStart_toStartOf="@+id/person_image"
            app:layout_constraintTop_toBottomOf="@+id/person_image"
            tools:text="Brad Pitt" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/person_known_for_department"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/large_font"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/person_name"
            tools:text="Acting" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/birthday_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:text="@string/birthday"
            android:textColor="@color/gray900"
            android:textSize="@dimen/large_font"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/person_known_for_department" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/person_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            app:layout_constraintBottom_toBottomOf="@+id/birthday_text"
            app:layout_constraintStart_toEndOf="@+id/birthday_text"
            app:layout_constraintTop_toTopOf="@+id/birthday_text"
            android:textColor="@color/blue"
            tools:text="1963-12-18" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/place_of_birth_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:text="@string/place_of_birth"
            android:textColor="@color/gray900"
            android:textSize="@dimen/large_font"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/birthday_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/person_place_of_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            app:layout_constraintBottom_toBottomOf="@+id/place_of_birth_text"
            app:layout_constraintStart_toEndOf="@+id/place_of_birth_text"
            app:layout_constraintTop_toTopOf="@+id/place_of_birth_text"
            tools:text="Shawnee, Oklahoma, USA"
            android:textColor="@color/blue"
            />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/biography_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:textColor="@color/black"
            android:textSize="@dimen/large_font"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/place_of_birth_text"
            android:text="@string/biography" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/person_biography"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:padding="@dimen/small_margin"
            android:textColor="@color/gray900"
            android:textSize="@dimen/standard_font"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/biography_text"
            tools:text="@string/lorem_ipsum" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/known_for_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/extra_margin"
            android:layout_marginBottom="@dimen/standard_margin"
            android:text="@string/known_for"
            android:textColor="@color/black"
            android:textSize="@dimen/large_font"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/person_biography" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/known_for_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/known_for_text"
            tools:itemCount="1"
            tools:listitem="@layout/movie_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>