<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.MovieDetailFragment">

<!--    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerFrameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            >

            <include layout="@layout/shimmer_placeholder_layout"/>

        </com.facebook.shimmer.ShimmerFrameLayout>-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/movie_detail_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/backdrop_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/load" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/poster_image"
                android:layout_width="180dp"
                android:layout_height="230dp"
                android:layout_marginStart="@dimen/standard_margin"
                android:adjustViewBounds="true"
                android:background="@drawable/round_outline"
                app:layout_constraintBottom_toBottomOf="@+id/backdrop_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/backdrop_image" />


            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/imageButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="-25dp"
                android:layout_marginEnd="@dimen/large_margin"
                android:background="@drawable/bg_play_button"
                android:src="@drawable/ic_movie"
                android:tint="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/backdrop_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/backdrop_image" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tagline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:textColor="@color/black"
                android:textSize="@dimen/standard_font"
                app:layout_constraintBottom_toTopOf="@+id/poster_image"
                app:layout_constraintStart_toStartOf="@+id/poster_image"
                tools:text="tag_line_test_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_vote_avg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_margin"
                android:layout_marginTop="35dp"
                android:text="@string/vote_average"
                android:textColor="@color/black"
                android:textSize="@dimen/standard_font"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/poster_image"
                app:layout_constraintTop_toBottomOf="@+id/backdrop_image" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:textColor="@color/black"
                android:textSize="@dimen/standard_font"
                app:layout_constraintBottom_toBottomOf="@+id/textView_vote_avg"
                app:layout_constraintStart_toEndOf="@+id/textView_vote_avg"
                app:layout_constraintTop_toTopOf="@+id/textView_vote_avg"
                tools:text="6.7" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_margin"
                android:text="@string/release_date"
                android:textColor="@color/black"
                android:textSize="@dimen/standard_font"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/poster_image"
                app:layout_constraintStart_toEndOf="@+id/poster_image"
                app:layout_constraintTop_toBottomOf="@+id/textView_vote_avg"
                app:layout_constraintVertical_bias="0.325" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:textColor="@color/black"
                android:textSize="@dimen/standard_font"
                app:layout_constraintBottom_toBottomOf="@+id/textView_release_date"
                app:layout_constraintStart_toEndOf="@+id/textView_release_date"
                app:layout_constraintTop_toTopOf="@+id/textView_release_date"
                tools:text="2012/02/05" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/runtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:textColor="@color/black"
                android:textSize="@dimen/standard_font"
                app:layout_constraintBottom_toBottomOf="@+id/textView_runtime"
                app:layout_constraintStart_toEndOf="@+id/textView_runtime"
                app:layout_constraintTop_toTopOf="@+id/textView_runtime"
                tools:text="134 min" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_runtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_margin"
                android:text="@string/runtime"
                android:textColor="@color/black"
                android:textSize="@dimen/standard_font"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/poster_image"
                app:layout_constraintStart_toEndOf="@+id/poster_image" />

            <!--TODO rating bar for movies-->
            <!--<androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:numStars="5"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:indeterminateTint="@color/red"
                android:rating="3.7"
                app:layout_constraintEnd_toEndOf="@+id/poster_image"
                app:layout_constraintStart_toStartOf="@+id/poster_image"
                app:layout_constraintTop_toBottomOf="@+id/poster_image" />-->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:text="@string/Genre"
                android:textColor="@color/black"
                android:textSize="@dimen/extra_font"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/poster_image" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/genre_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView_genre"
                tools:itemCount="1"
                tools:listitem="@layout/genre_item" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:text="@string/Overview"
                android:textColor="@color/black"
                android:textSize="@dimen/extra_font"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genre_recycler_view" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_margin"
                android:layout_marginEnd="@dimen/standard_margin"
                android:padding="@dimen/standard_margin"
                android:textColor="@color/black"
                android:textSize="@dimen/standard_font"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView_overview"
                tools:text="@string/lorem_ipsum" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView_cast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:text="@string/casts"
                android:textColor="@color/black"
                android:textSize="@dimen/extra_font"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/overview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cast_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appCompatTextView_cast"
                tools:itemCount="1"
                tools:listitem="@layout/cast_item" />
        </androidx.constraintlayout.widget.ConstraintLayout>

   <!-- </androidx.constraintlayout.widget.ConstraintLayout>-->

</ScrollView>